Overflow problem resolved

--- a/ip_component/style.css
+++ b/ip_component/style.css
@@ -13,6 +13,7 @@
   padding: 0;
   box-sizing: border-box;
   background-color: var(--dark);
+  overflow-x: hidden;
 }
 
 .HEADER {
